# react-flask-starter

./: .gitignore  Makefile  NOTES.md  README.md  docker-compose.yml  go.mod  go.sum
.circleci/: config.yml
.github/workflows/: demonstrate-api.yml  print-env-data.yml
backend/: Dockerfile  pyproject.toml
backend-go/: Dockerfile  main.go  route-gif-seach-retrieve.go  route-gif-search-create.go  types.go  upload-file-from-url.go
backend/filesystem/entrypoints/: restart-worker.sh  web.sh  worker.sh
backend/go/: Dockerfile
backend/go/cmd/: main.go
backend/go/search/: giphy_response.go  search.go
backend/go/storage/: get.go  search.go  storage.go
backend/go/web/: create_search.go  get_results.go  utils.go  web.go
backend/migrations/versions/: 0ce43b01163f_.py  fb060a24643d_.py
backend/python/filesystem/entrypoints/: web.sh
backend/python/migrations/versions/: 4fa2v66e76a1.py  fb060a24643d.py
backend/python/src/: entry.py  utils.py
backend/python/src/models/: base.py
backend/python/src/routes/: __init__.py
backend/src/: app.py  settings.py  tasks.py
backend/src/models/: __init__.py  counter.py
backend/src/routes/: __init__.py  counter.py  gif_search.py  localstack.py
frontend/: Dockerfile  README.md  frontend.env  package-lock.json  package.json
frontend/src/: index.js  setupProxy.js
frontend/src/assets/css/: index.css
frontend/src/components/: App.js  ConnectCard.js  DeployCard.js  DoomCard.js  DoomModal.js  MaterialCard.js  ThemeCard.js  UploadCard.js
localstack/data/: startup_info.json
proxy/: reverse_proxy.conf
