[tool.poetry]
name = "shipyard-template-flask"
version = "1.0.0"
description = ""
authors = ["Shipyard <team@shipyard.build>"]

[tool.poetry.dependencies]
python = "3.8.8"
flask = "1.1.1"
uwsgi = "2.0.18"
flask-sqlalchemy = "2.4.1"
celery = "4.4.2"
flask-migrate = "2.5.3"
sqlalchemy-utils = "0.36.3"
cryptography = "2.8"
redis = "3.4.1"
flask-shell-ipython = "0.4.1"
psycopg2 = "2.8.4"
boto3 = "1.16.44"
localstack-client = "1.10"

[tool.poetry.dev-dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
